--- a/asrc/emergency/src/app/console/_components/sidebar/sidebar.component.html
+++ b/asrc/emergency/src/app/console/_components/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
               <a pRipple
                 class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors">
                 <i class="pi pi-home mr-2"></i>
-                <span routerLink="/console" class="font-medium">Dashboard</span>
+                <span routerLink="/console/dash" class="font-medium">Dashboard</span>
               </a>
             </li>
             <li>
