--- a/asrc/emergency/src/app/console/_components/topbar/topbar.component.html
+++ b/asrc/emergency/src/app/console/_components/topbar/topbar.component.html
@@ -20,7 +20,8 @@
       <li>
         <a pRipple (click)="checkBell()" class="flex p-3 lg:px-3 lg:py-2 align-items-center text-600 hover:text-900 hover:surface-100 font-medium border-round cursor-pointer
                     transition-duration-150 transition-colors">
-          <i class="pi pi-bell text-base lg:text-2xl mr-2 lg:mr-0" pBadge value="{{messages.length}}" severity="danger"></i>
+          <i class="pi pi-bell text-base lg:text-2xl mr-2 lg:mr-0"  *ngIf="messages.length > 0" pBadge value="{{messages.length}}" severity="danger"></i>
+          <i class="pi pi-bell text-base lg:text-2xl mr-2 lg:mr-0"  *ngIf="messages.length == 0"></i>
           <span class="block lg:hidden font-medium">Notifications</span>
         </a>
       </li>
