--- a/asrc/emergency/src/app/console/console.component.html
+++ b/asrc/emergency/src/app/console/console.component.html
@@ -3,7 +3,7 @@
     <app-sidebar></app-sidebar>
     <div class="flex flex-column relative flex-auto">
     <app-topbar></app-topbar>
-      <div class="p-5 bg-primary flex-auto grid-nogutter">
+      <div class="p-0 lg:p-2 xl:p-5 bg-primary flex-auto grid-nogutter">
           <router-outlet></router-outlet>
       </div>
     </div>
